# test_cookiecutter-fortran-cmake

./: CMakeLists.txt  README.rst
.github/workflows/: ci.yml
app/: CMakeLists.txt  myprojectapp.f90
cmake/export/: myproject-config.cmake.in
src/: CMakeLists.txt  myproject.f90
src/myproject/: version.f90
test/integration/: CMakeLists.txt  test_build.f90
test/src/: CMakeLists.txt  test_version.f90
